--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,26 @@
-
 Binaries/
 Build/
 DerivedDataCache/
 Intermediate/
 Saved/
 
+# IDE and build system files
 *.sln
 *.suo
 *.xcodeproj
 *.xcworkspace
 *.VC.db
 *.VC.VC.opendb
+
+# Compiled binaries
+*.dll
+*.exe
+*.pdb
+*.user
+*.app
+*.ipa
+*.dSYM
+*.psess
 
 *.log
 *.tmp
@@ -23,3 +33,7 @@ Saved/
 # Visual Studio cache
 .vs/
 *.ipch
+
+Config/DefaultEditor.ini
+Config/DefaultEngine.ini
+Config/DefaultGame.ini
