--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,6 @@
 *.jpeg  filter=lfs diff=lfs merge=lfs -text
 *.tga   filter=lfs diff=lfs merge=lfs -text
 *.exr   filter=lfs diff=lfs merge=lfs -text
+
+*.uasset lockable
+*.umap lockable
