--- a/Plugins/UEGitPlugin-3.16/_config.yml
+++ b/Plugins/UEGitPlugin-3.16/_config.yml
@@ -1,5 +1,2 @@
-[/Script/UnrealEd.EditorLoadingSavingSettings]
-bSCCAutoAddNewFiles=False
-bAutomaticallyCheckoutOnAssetModification=True
-bPromptForCheckoutOnAssetModification=False
 show_downloads: true
+theme: jekyll-theme-slate
