--- a/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Config/DefaultEditorPerProjectUserSettings.ini
@@ -1,2 +1,6 @@
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonCPP
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCAutoAddNewFiles=False
+bAutomaticallyCheckoutOnAssetModification=True
+bPromptForCheckoutOnAssetModification=False
