--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode=/Script/InfectedCity.InfectedCityGameMode
+GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_MyGameMode.BP_MyGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
