--- a/Backup/InfectedCity.vcxproj.filters
+++ b/Backup/InfectedCity.vcxproj.filters
@@ -169,6 +169,15 @@
     <Filter Include="Source\InfectedCity\00.GameObjects\UI">
       <UniqueIdentifier>{4aac3c4f-77d6-4b9a-a8f7-47e43779218a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\InfectedCity\00.GameObjects\Weapon">
+      <UniqueIdentifier>{7502e972-68e3-439c-92e6-2c2547a8d051}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\InfectedCity\00.GameObjects\Weapon\AKWeapon">
+      <UniqueIdentifier>{7e416afa-8eb1-4f3a-ae69-ad5e0ffe80d3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\InfectedCity\01.Utility\EffectManager">
+      <UniqueIdentifier>{8f82e72b-62c7-43f9-920e-33fbb7b1bbaf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source\InfectedCity\99.Default">
@@ -278,6 +287,22 @@
     <ClCompile Include="..\..\Source\InfectedCity\Private\EnemyEffectManager.cpp">
       <Filter>Source\InfectedCity\01.Utility\EnemyEffectManager</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\InfectedCity\Public\WeaponBase.h">
+      <Filter>Source\InfectedCity\00.GameObjects\Weapon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\InfectedCity\Private\WeaponBase.cpp">
+      <Filter>Source\InfectedCity\00.GameObjects\Weapon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\InfectedCity\Public\AkWeapon.h">
+      <Filter>Source\InfectedCity\00.GameObjects\Weapon\AKWeapon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\InfectedCity\Private\AkWeapon.cpp">
+      <Filter>Source\InfectedCity\00.GameObjects\Weapon\AKWeapon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\InfectedCity\Private\HUDWidget.cpp">
+      <Filter>Source\InfectedCity\00.GameObjects\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\InfectedCity\Public\HUDWidget.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\InfectedCity.uproject" />
