--- a/InfectedCity.uproject
+++ b/InfectedCity.uproject
@@ -31,6 +31,10 @@
 		{
 			"Name": "PCGGeometryScriptInterop",
 			"Enabled": true
+		},
+		{
+			"Name": "PCGExtendedToolkit",
+			"Enabled": true
 		}
 	]
 }
